Add wiredep tags to index.html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <!-- bower:css -->
+    <!-- endbower -->
     <link rel="stylesheet" href="stylesheets/styles.css">
 </head>
 <body>
     <h1>Welcome to you scaffolded application.</h1>
 
-
+    <!-- bower:js -->
+    <!-- endbower -->
     <script src="javascript/app.js"></script>
 </body>
 </html>
